--- a/experience.html
+++ b/experience.html
@@ -34,12 +34,14 @@
             padding: 1em;
             margin: 2em 0;
             color: #bdbdbd;
-            border-left: solid 10px #a4d2ff;
-            margin-left: 8em;
+            border-left: solid 5px #868484;
+            margin-left: 11em;
             height: 18px;
             margin-bottom: 1em;
             align-items: center;
             display: flex;
+            padding-top: 2em;
+            padding: 1em;
         }
 
         .textbox{
@@ -71,6 +73,9 @@
             margin: 4px;
             z-index: -1;
             }
+        h3{
+            
+        }
     </style>
 </head>
 <body>
@@ -103,7 +108,7 @@
     </nav>
     
     <h2 class="text" style="text-align: center;padding-top: 2em;">自我評估與心得感想</h2>
-    <h3 class="text1" style="border-left: solid 5px #868484; padding-top: 2em; padding: 1em;">一、自我評估</h3>
+    <h3 class="text1">一、自我評估</h3>
         <figure class="text-center">
             <blockquote class="blockquote">
               <p class="textbox">當初在轉到元智之前就有聽說大三開始學校有實習的這個課程，那時候還不確定之後想走的到底是不是這條路，
@@ -112,7 +117,7 @@
                 但是如果多測試幾次詳細檢查後也會比較保險。</p>
             </blockquote>
           </figure>
-    <h3 class="text1" style="border-left: solid 5px #868484; padding-top: 2em; padding: 1em;">二、心得感想</h3>
+    <h3 class="text1">二、心得感想</h3>
     <figure class="text-center">
         <blockquote class="blockquote">
           <p class="textbox">當初在面試的時候主管問過我家裡到公司要多久的時間，我說我沒有去查，因為我覺得進入的公司能夠讓我學習到東西比較重要，
