--- a/learning.html
+++ b/learning.html
@@ -213,7 +213,7 @@
       </div>
      <div id="hide2">
       <h1 style="text-align: center; padding-top: 1.5em;"  class="text">非技術面</h1>
-      <div class="container" data-aos="flip-right">
+      <div class="container" data-aos="flip-left">
         <div class="row">
           <div class="col-sm-12 col-md-6 order-2 order-md-1">
             <div class="container">
@@ -254,7 +254,7 @@
           </div>
       </div>
       </div>
-      <div class="container" data-aos="zoom-in-down">
+      <div class="container" data-aos="flip-up">
           <div class="row">
               <div class="col-sm-12 col-md-6 order-1 order-md-1">
                   <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
