--- a/suggest.html
+++ b/suggest.html
@@ -34,12 +34,14 @@
             padding: 1em;
             margin: 2em 0;
             color: #bdbdbd;
-            border-left: solid 10px #a4d2ff;
-            margin-left: 8em;
+            border-left: solid 5px #868484;
+            margin-left: 11em;
             height: 18px;
             margin-bottom: 1em;
             align-items: center;
             display: flex;
+            padding-top: 2em;
+            padding: 1em;
         }
 
         .textbox{
@@ -102,14 +104,14 @@
         </div>
     </nav>
     <h2 class="text" style="text-align: center;padding-top: 2em;">給學校的建議</h2>
-    <h3 class="text1" style="border-left: solid 5px #868484; padding-top: 2em; padding: 1em;">作品集、履歷參考</h3>
+    <h3 class="text1">作品集、履歷參考</h3>
         <figure class="text-center">
             <blockquote class="blockquote">
               <p class="textbox">希望系上可以收集以往的履歷作品讓每一屆要參與實習的同學參考，有些外系都有作品集的課程，我們只有履歷健檢跟講座，
                 這樣還是有點難知道履歷跟作品該放些什麼才能更吸引到公司的注意，讓我們可以有更多的競爭力。</p>
             </blockquote>
           </figure>
-    <h3 class="text1" style="border-left: solid 5px #868484; padding-top: 2em; padding: 1em;">感言</h3>
+    <h3 class="text1">感言</h3>
           <figure class="text-center">
               <blockquote class="blockquote">
                 <p class="textbox">最後還是很謝謝系上給我們能夠到業界實習的機會，從履歷撰寫、面試，然後到公司後的適應等等，能夠在學生時期體驗這些不一樣的學習，幫助了我們未來進入職場更有經驗，
