--- a/learning.html
+++ b/learning.html
@@ -254,7 +254,7 @@
           </div>
       </div>
       </div>
-      <div class="container" data-aos="fade-up-right">
+      <div class="container" data-aos="zoom-out-down">
           <div class="row">
               <div class="col-sm-12 col-md-6 order-1 order-md-1">
                   <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
@@ -295,7 +295,7 @@
     </div> 
     <script>
         AOS.init({
-            duration: 2000,
+            duration: 1000,
             delay :300
         });
     </script>
