--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="a1" href="work.html" style="--clr:#0f0;"><span>工作內容</span></a>
         <a class="a1" href="learning.html" style="--clr:#ff0;"><span>學習</span></a>
         <a class="a1" href="experience.html" style="--clr:#f0f;"><span>心得感想</span></a>
-        <a class="a1" href="suggest.html" style="--clr:#f0f;" ><span>給系上的建議</span></a>
+        <a class="a1" href="suggest.html" style="--clr:#ff0;" ><span>給系上的建議</span></a>
       
     </div>
     </div>
