--- a/experience.html
+++ b/experience.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="css/work.css">
     <style>
         .navbar-nav .nav-link {
-            color: #bdbdbd !important;
+            color: #ffffff !important;
         }
 
         body {
-            background: radial-gradient(circle at 100%, #b7b1b170, #171616),  /* fallback for old browsers */
-                        radial-gradient(farthest-side at top left, #2b2929, #0a0a0a70),
-                        radial-gradient(farthest-side at top left, #252323, #0a0a0a70),
-                        radial-gradient(farthest-corner at top right, #282626, #0a0a0a70),
-                        radial-gradient(farthest-corner at top right, #413d3d, #24232370);
+            background: radial-gradient(circle at 100%, #e7b67a70, #234870),  /* fallback for old browsers */
+                        radial-gradient(farthest-side at top left, #675543, #1765a170),
+                        radial-gradient(farthest-side at top left, #e1c7a4, #114b7470),
+                        radial-gradient(farthest-corner at top right, #cab48d, #1080b770),
+                        radial-gradient(farthest-corner at top right,  #d8be86,#29699270);
         }
 
         .container {
@@ -27,15 +27,15 @@
         }
 
         .text {
-            color: #bdbdbd;
+            color: #ffffff;
         }
         
         .text1{
             padding: 1em;
             margin: 2em 0;
-            color: #bdbdbd;
-            border-left: solid 5px #868484;
-            margin-left: 11em;
+            color: #ffffff;
+            border-left: solid 5px #ffffff;
+            margin-left: 4em;
             height: 18px;
             margin-bottom: 1em;
             align-items: center;
@@ -50,8 +50,8 @@
         margin:  0 auto;
         text-align: center;
         padding: 15px;
-        color: #afacac; 
-        background-color: #e4e9ee13; 
+        color: #ffffff; 
+        background-color: #ffffff13; 
         border-radius: 5px;
         padding: 20px;
         position: relative;
