--- a/work.html
+++ b/work.html
@@ -31,14 +31,14 @@
     </script>
     <style>
         .navbar-nav .nav-link {
-            color: #bdbdbd !important;
+            color: #ffffff !important;
         }
         body {
-            background:radial-gradient(circle at 100%,#b7b1b170,#171616),  /* fallback for old browsers */
-                        radial-gradient(farthest-side at top left,#2b2929,#0a0a0a70),
-                        radial-gradient(farthest-side at top left,#252323,#0a0a0a70),
-                        radial-gradient(farthest-corner at top right,#282626,#0a0a0a70),
-                        radial-gradient(farthest-corner at top right,#413d3d,#24232370);
+            background:radial-gradient(circle at 100%,#d0a57470,#123d62),  /* fallback for old browsers */
+                        radial-gradient(farthest-side at top left,#d8b18d,#093d8170),
+                        radial-gradient(farthest-side at top left,#d0ab81,#0d4d8e70),
+                        radial-gradient(farthest-corner at top right,#dab888,#22599d70),
+                        radial-gradient(farthest-corner at top right,#e4b07c,#224f8370);
         }
 
         .container{
@@ -47,7 +47,7 @@
           overflow: hidden; 
         }
         .text{
-            color: #bdbdbd;
+            color: #ffffff;
         }
     
    </style>
@@ -121,7 +121,7 @@
             </div>
           </div>
           <div class="col-sm-12 col-md-6 order-1 order-md-2">
-            <img src="img/3.png" class="rounded img-fluid" alt="">
+            <img src="img/npo1.png" class="rounded img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -151,13 +151,16 @@
             <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/donate.jpg" class="d-block w-100" alt="...">
+                    <img src="img/donate.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/online.jpg" class="d-block w-100" alt="...">
+                    <img src="img/online.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/eacncer2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/ecancer.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/ecancer2.png" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -192,10 +195,10 @@
             <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/tr.jpg" class="d-block w-100" alt="...">
+                    <img src="img/舊資料轉檔1.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/trexcel.jpg" class="d-block w-100" alt="...">
+                    <img src="img/舊資料轉檔.png" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
@@ -219,7 +222,7 @@
                 <div class="col-12 mt-3 mt-md-auto">
                   <h3 class="text">資料庫設計</h3>
                   <div class="second-content text">
-                    捐款系統中，有很多查詢資料的功能，而有些客戶是非常大的機構，他們的捐款資料就會有好幾千筆甚至好幾萬筆，所以在寫SQL語法時，要如何善用查詢語法達到查詢效率就成了一個很大的課題。
+                    捐款系統中，有很多查詢資料的功能，雖然公司的資料庫設計的沒有很複雜，在語法的使用上不會太過困難，但有些客戶是非常大的機構，他們的捐款資料就會有好幾千筆甚至好幾萬筆，所以在寫SQL語法時，要如何善用查詢語法達到查詢效率就成了一個很大的課題。
                   </div>
                 </div>
               </div>
@@ -229,10 +232,10 @@
             <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/sql.jpg" class="d-block w-100" alt="...">
+                    <img src="img/資料庫設計1.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/sql2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/資料庫設計2.png" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
