--- a/experience.html
+++ b/experience.html
@@ -39,6 +39,7 @@
     margin-bottom: 1em;
     display: flex;
     align-items: center;
+    margin-left: calc(50% - 400px); /* 使其与 .textbox 左对齐 */
 }
 
 .textbox {
