--- a/experience.html
+++ b/experience.html
@@ -19,44 +19,39 @@
                         radial-gradient(farthest-corner at top right, #cab48d, #1080b770),
                         radial-gradient(farthest-corner at top right,  #d8be86,#29699270);
         }
-
-        .container {
-            width: auto;
-            margin: 50px auto;
-            overflow: hidden;
-        }
-
         .text {
             color: #ffffff;
         }
-        
-        .text1 {
+        .container {
+    width: 800px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.text1 {
     padding: 1em;
-    margin: 2em 0;
     color: #ffffff;
     border-left: solid 5px #ffffff;
     height: 18px;
     margin-bottom: 1em;
     display: flex;
     align-items: center;
-    margin-left: calc(50% - 400px); /* 使其与 .textbox 左对齐 */
+    background-color: rgba(0, 0, 0, 0.5); /* Optional: Background color to make text1 more visible */
 }
 
 .textbox {
     width: 800px;
     height: 250px;
-    margin: 0 auto;
-    text-align: justify;
     padding: 15px;
     color: #ffffff; 
-    background-color: #ffffff13; 
+    background-color: rgba(255, 255, 255, 0.13); 
     border-radius: 5px;
     position: relative;
     z-index: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    text-align: justify;
 }
 
 .textbox:before {
@@ -65,13 +60,14 @@
     content: '';
     display: block;
     position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     margin: 4px;
     z-index: -1;
 }
+
     </style>
 </head>
 <body>
