--- a/learning.html
+++ b/learning.html
@@ -106,8 +106,8 @@
             <div class="content">
                 <h2>Excel匯入匯出功能</h2>
                 <p>在實習初期時主管給了四個作業，第一個作業主要是要做出系統的查詢及編輯頁面以及Excel匯出功能，
-                    中Excel匯出的部分因為沒有接觸過，所以我覺得比較困難，要先建立一個Excel表單結構並把從資料庫中抓取的資料insert到欄位中，
-                    在之後的案子中也有接觸到要使用Excel匯入的功能，比匯出還複雜了許多，還要去比對相同捐款人的資料並且判斷要覆蓋還是要新增新的一筆資料。
+                    其中匯出的部分，要先建立一個Excel表單結構並把從資料庫中抓取的資料insert到欄位中，
+                    在後續案子中也有接觸到要使用Excel匯入的功能，比匯出還複雜了許多，還要去比對相同捐款人的資料並且判斷要覆蓋還是要新增新的一筆資料。
                     很多機構的匯入匯出功能都會有不同的需求，常常會需要調整到這個部分。</p>
             </div>
         </div>
