--- a/learning.html
+++ b/learning.html
@@ -104,7 +104,7 @@
                 <img src="./img/匯入1.png">
             </div>
             <div class="content">
-                <h2>Excel匯入匯出功能</h2>
+                <h2>Excel匯入匯出</h2>
                 <p>在實習初期時主管給了四個作業，第一個作業主要是要做出系統的查詢及編輯頁面以及Excel匯出功能，
                     其中匯出的部分，要先建立一個Excel表單結構並把從資料庫中抓取的資料insert到欄位中，
                     在後續案子中也有接觸到要使用Excel匯入的功能，比匯出還複雜了許多，還要去比對相同捐款人的資料並且判斷要覆蓋還是要新增新的一筆資料。
