--- a/suggest.html
+++ b/suggest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>心得感想</title>
+    <title>建議</title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/work.css">
@@ -37,7 +37,7 @@
     margin-bottom: 1em;
     display: flex;
     align-items: center;
-    margin-left: calc(50% - 400px); /* 使其与 .textbox 左对齐 */
+    margin-left: calc(50% - 400px); 
 }
 
 .textbox {
@@ -58,7 +58,7 @@
 }
 
 .textbox:before {
-    border: 1px solid #fff; /* 白線 */
+    border: 1px solid #fff; 
     border-radius: 5px;
     content: '';
     display: block;
@@ -103,7 +103,7 @@
         </div>
     </nav>
     
-    <h2 class="text" style="text-align: center;padding-top: 2em;">給學校的建議</h2>
+    <h2 class="text" style="text-align: center;padding-top: 2em;">給系上的建議</h2>
     <h3 class="text1">作品集、履歷參考</h3>
         <figure class="text-center">
             <blockquote class="blockquote">
