--- a/learning.html
+++ b/learning.html
@@ -202,8 +202,8 @@
             <div class="content">
                 <h2>前端AJAX</h2>
                 <p>以前做網頁時，前端都只會做介面設計與版面調整。公司系統中使用了很多AJAX，在不刷新頁面的情況下讀取資料。
-                    後台系統中有一個捐物功能，可以立即顯示新增的捐物資料。有客戶希望將此功能應用到前台系統，而標準版前台沒有此功能。
-                    我思考許久後使用了後台的AJAX，將新增資料存入後台的捐物資料表，並新增一個欄位以分辨資料來源，確保後台查看時不會誤撈資料。
+                    後台系統有一個捐物功能，會立即顯示新增的捐物資料。有客戶希望將此功能應用到前台系統，而標準版前台沒有此功能。
+                    我思考許久後使用了後台的AJAX，將新增資料存入後台的捐物資料表，並新增一個欄位辨別資料來源，確保後台查看時不會誤撈資料。
                     這個案子讓我更熟練地掌握了AJAX。</p>
             </div>
         </div>
