--- a/learning.html
+++ b/learning.html
@@ -254,7 +254,7 @@
                 <div class="content">
                     <h2>時間管理</h2>
                     <p>在這段時間讓我學習最多的莫過於時間上的管理，一週五天的時間中，有三天的時間要待在公司內，剩下兩天的時間還要處理學校課業的部分，而且因為我是轉學生的關係，
-                        要重修的課程也不少，在學校的這兩天必須把課程安排妥當，已經到了大三下了如果沒有規劃好時間，把課程、作業安排好，被當了很可能就會面臨延畢的風險。在學校剩餘的時間也不多了，
+                        要重修的課程也不少，在學校的這兩天必須把課程安排妥當，在這個階段如果沒有規劃好時間，把課程安排好，被當了很可能就會面臨延畢的風險。在學校剩餘的時間也不多了，
                         畢業後如果進入職場能夠自由控制的時間一定是更少，所以要怎麼有效的管理時間，兼顧所有事情便是很重要的課題。
                     </p>
                 </div>
