--- a/suggest.html
+++ b/suggest.html
@@ -13,6 +13,7 @@
         }
 
         body {
+            font-family: Helvetica,"微軟正黑體";
             background: radial-gradient(circle at 100%, #e7b67a70, #234870),  /* fallback for old browsers */
                         radial-gradient(farthest-side at top left, #675543, #1765a170),
                         radial-gradient(farthest-side at top left, #e1c7a4, #114b7470),
@@ -87,6 +88,9 @@
                 <ul class="navbar-nav flex-grow-1"></ul>
                 <ul class="navbar-nav flex-grow-3">
                     <li class="nav-item">
+                        <a href="Company.html" class="nav-link text-dark" >公司介紹</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="work.html" class="nav-link text-dark">工作內容</a>
                     </li>
                     <li class="nav-item">
@@ -107,15 +111,14 @@
     <h3 class="text1">作品集、履歷參考</h3>
         <figure class="text-center">
             <blockquote class="blockquote">
-              <p class="textbox">希望系上可以收集以往的履歷作品讓每一屆要參與實習的同學參考，有些外系都有作品集的課程，我們只有履歷健檢跟講座，
-                這樣還是有點難知道履歷跟作品該放些什麼才能更吸引到公司的注意，讓我們可以有更多的競爭力。</p>
+              <p class="textbox">系上在大三的時候有安排履歷健檢以及面試講座來讓大家大致了解履歷可以怎麼做會更吸引公司，但是如果可以蒐集以往的履歷作品讓每一屆要參與實習的同學參考，或許能夠讓我們更清楚每間公司喜歡的履歷內容風格，也能在面試時有更多的競爭力。</p>
             </blockquote>
           </figure>
-    <h3 class="text1">二、心得感想</h3>
+    <h3 class="text1">二、感言</h3>
     <figure class="text-center">
         <blockquote class="blockquote">
           <p class="textbox">最後還是很謝謝系上給我們能夠到業界實習的機會，從履歷撰寫、面試，然後到公司後的適應等等，能夠在學生時期體驗這些不一樣的學習，幫助了我們未來進入職場更有經驗，
-            也讓我們能夠知道這個行業是否是自己真正喜歡、想要做的，讓我們對未來的想像清了晰許多。</p>
+            也讓我們能夠知道這個行業是否是自己真正喜歡、想要做的，讓我們對未來的想像清晰了許多。</p>
         </blockquote>
       </figure>
       
