--- a/work.html
+++ b/work.html
@@ -34,6 +34,7 @@
             color: #ffffff !important;
         }
         body {
+            font-family: Helvetica,"微軟正黑體";
             background:radial-gradient(circle at 100%,#d0a57470,#123d62),  /* fallback for old browsers */
                         radial-gradient(farthest-side at top left,#d8b18d,#093d8170),
                         radial-gradient(farthest-side at top left,#d0ab81,#0d4d8e70),
@@ -66,6 +67,9 @@
                 <ul class="navbar-nav flex-grow-1"></ul>
                 <ul class="navbar-nav flex-grow-3">
                     <li class="nav-item">
+                      <a class="nav-link text-dark" href="Company.html">公司介紹</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" href="work.html">工作內容</a>
                     </li>
                     <li class="nav-item">
@@ -80,51 +84,7 @@
                 </ul>
             </div>
         </div>
-    </nav>
-    <h1 style="text-align: center; padding-top: 1.5em;"  class="text">公司介紹</h1>
-    <h3 style="text-align: center;padding-top: 1.5em;" class="text">網軟，幫助非營利組織進入資訊化的時代。</h3>
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <img src="img/company.jpg" class="rounded img-fluid" alt="">
-          </div>
-          <div class="col-sm-12 col-md-6">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 mt-3 mt-md-auto">
-                  <h3 class="text">網軟股份有限公司</h3>
-                  <div class="second-content text">
-                    「網軟股份有限公司」係由喜瑪拉雅基金會所成立的社會企業，協助非營利組織解決資訊化過程中，
-                    所面臨的許多困難，包括缺乏相關應用軟體、缺乏資訊人才、網路公司不穩定、網路資料安全、
-                    以及缺乏足夠的市場吸引專業網路公司投入...等問題，並藉以降低公益團體的數位落差。
-                    成立至今，已成功的協助許多公益團體設置內部管理網站系統，簡化日常工作流程，降低行政成本，以及提升工作的效率與品質。
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 order-2 order-md-1">
-            <div class="container">
-              <div class="row">
-                <div class="col-12 mt-3 mt-md-auto">
-                  <h3 class="text">NPO 整合平台</h3>
-                  <div class="second-content text">
-                    NPOWEB 是針對非營利組織所研發的一套簡易快速架站軟體，輕輕鬆鬆架設屬於自己的網站。機構 E
-                    化的同時透過網際網路幫您把所有活動、服務訊息快速傳達至各地，加上網站互動功能以增加民眾的參與感，建立機構形象並強化營利機構／非營利公益團體的行銷整合能力。
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-6 order-1 order-md-2">
-            <img src="img/npo1.png" class="rounded img-fluid" alt="">
-          </div>
-        </div>
-      </div>
+    </nav> 
       <h1 style="text-align: center; padding-top: 1.5em;"  class="text">工作內容</h1>
       <div class="container" align="center">
         <a class="a1" id="h1">捐款系統增修</a>
