--- a/experience.html
+++ b/experience.html
@@ -13,6 +13,7 @@
         }
 
         body {
+            font-family: Helvetica,"微軟正黑體";
             background: radial-gradient(circle at 100%, #e7b67a70, #234870),  /* fallback for old browsers */
                         radial-gradient(farthest-side at top left, #675543, #1765a170),
                         radial-gradient(farthest-side at top left, #e1c7a4, #114b7470),
@@ -87,6 +88,9 @@
                 <ul class="navbar-nav flex-grow-1"></ul>
                 <ul class="navbar-nav flex-grow-3">
                     <li class="nav-item">
+                        <a href="Company.html" class="nav-link text-dark" >公司介紹</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="work.html" class="nav-link text-dark">工作內容</a>
                     </li>
                     <li class="nav-item">
@@ -107,17 +111,17 @@
     <h3 class="text1">一、自我評估</h3>
         <figure class="text-center">
             <blockquote class="blockquote">
-              <p class="textbox">當初在轉到元智之前就有聽說大三開始學校有實習的這個課程，那時候還不確定之後想走的到底是不是這條路，
-                所以就打算利用這個機會來看看自己對這個是否真的有興趣，在實際進入到業界實習後發現自己對這方面還是抱有蠻大的興趣的，讓我對未來比較沒有那麼迷惘了。
-                在能力上我認為自己還有很大的進步空間，也需要多培養一些耐性，有些程式做出來之後需要進行些測試，自己常常會沒有耐心就急著把程式交出去，雖然目前還沒遇到什麼太大的問題，
-                但是如果多測試幾次詳細檢查後也會比較保險。</p>
+              <p class="textbox">當初在轉學到元智之前就有聽說大三開始學校有實習的這個課程，那時候還不確定之後想走的到底是不是這條路，所以就打算利用這個機會來看看自己對這個是否真的有興趣，
+                在實際進入到業界實習後發現自己對這方面還是抱有蠻大的興趣的，也讓我對未來比較沒有那麼迷惘了。
+                在能力上我認為自己還有很大的進步空間，也需要多培養一些耐性，有時候可能會因為粗心導致工作沒做好又要再修改，
+                花費不少時間，雖然做得快，但是要能夠快又正確才是最重要的。</p>
             </blockquote>
           </figure>
     <h3 class="text1">二、心得感想</h3>
     <figure class="text-center">
         <blockquote class="blockquote">
-          <p class="textbox">當初在面試的時候主管問過我家裡到公司要多久的時間，我說我沒有去查，因為我覺得進入的公司能夠讓我學習到東西比較重要，
-            在進入公司後也確實學習到了很多的新技能與知識，不過也讓我了解到了在這個行業中，網頁架構會不斷地推陳出新，如果未來要待在這個產業中就必須持續不斷的精進自己，
+          <p class="textbox">當初在面試的時候主管問過我家裡到公司要多久的時間，我說我沒有去查，因為我覺得進入的公司能夠讓我學習到東西比較重要，很幸運的在進入公司後確實學習到了很多的新技能與知識，非常感謝主管與學校當初給我這個機會，讓我進到公司學習，並且也很信任我的能力，
+            讓我在短短一年的時間中接觸了那麼多開發相關的案子，讓我逐漸的有能夠獨立完成專案的能力。也讓我了解到了在這個行業中，網頁架構會不斷地推陳出新，如果未來要待在這個產業中就必須持續不斷的精進自己，
             利用時間學習更多的技能，科技不斷的創新發展我的能力也勢必要持續精進。</p>
         </blockquote>
       </figure>
